[tool.poetry]
name = "flask-sitemapper"
# The version will be automatically set when a release is created
version = "0.0.0"
description = "Flask extension for generating XML sitemaps"
authors = ["h-janes <dev@hjanes.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python3", "flask", "sitemap", "xml"]
repository = "https://github.com/h-janes/flask-sitemapper"
documentation = "https://github.com/h-janes/flask-sitemapper/wiki"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]
packages = [{include = "flask_sitemapper"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^3.0.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pytest = "^7.4.3"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
